--- a/server/config/database.yml
+++ b/server/config/database.yml
@@ -24,6 +24,8 @@ default: &default
 development:
   <<: *default
   database: server_development
+  host: localhost
+  port: 5432
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
