--- a/server/Gemfile
+++ b/server/Gemfile
@@ -18,6 +18,7 @@ gem 'bcrypt', '~> 3.1.7'
 gem 'jwt'
 gem 'sendgrid-ruby'
 gem 'email_validator'
+gem 'aws-sdk-s3'
 
 # Use Active Storage variant
 # gem 'image_processing', '~> 1.2'
