--- a/client/package.json
+++ b/client/package.json
@@ -7,18 +7,23 @@
     "@craco/craco": "^6.1.2",
     "@headlessui/react": "^1.2.0",
     "@heroicons/react": "^1.0.1",
+    "@hookform/resolvers": "^2.6.0",
     "@tailwindcss/forms": "^0.3.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "crypto-js": "^4.0.0",
+    "libphonenumber-js": "^1.9.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.10.1",
+    "react-hot-toast": "^2.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "validator": "^13.6.0",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "craco start",
