--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "libphonenumber-js": "^1.9.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.3.4",
     "react-hook-form": "^7.10.1",
     "react-hot-toast": "^2.0.0",
     "react-router-dom": "^5.2.0",
